--- a/css/master.css
+++ b/css/master.css
@@ -262,14 +262,15 @@ button {
 #trade {
   min-height: 100vh;
   max-width: 100vw;
-  padding: 7rem 9.375rem 0rem;
+  padding: 3rem 9.375rem 0rem;
   display: flex;
+  align-items: center;
 }
 #trade article {
   flex-basis: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 #trade article h2 {
   font-size: 60px;
@@ -277,7 +278,7 @@ button {
 #trade article p {
   color: #475467;
   font-size: 18px;
-  margin: 1rem 0;
+  margin: 3rem 0;
 }
 #trade ul li,
 #trade ul li span {
@@ -294,12 +295,13 @@ button {
 }
 #trade .images-box {
   flex-basis: 50%;
-  position: relative;
 }
 #trade .images-box img {
-  position: absolute;
+  position: relative;
   right: 0rem;
   top: 10%;
+  max-width: 100%;
+  float: right;
 }
 
 @media (max-width: 1024px) {
@@ -308,10 +310,20 @@ button {
     flex-direction: column;
     text-align: left;
   }
+  #trade article {
+    flex: 1;
+    justify-content: space-around;
+  }
+
+  #trade article P {
+    margin: 0rem;
+  }
   #trade .images-box img {
     left: 50%;
     top: 0%;
     transform: translateX(-50%);
+    max-width: 100%;
+    float: unset;
   }
 }
 
@@ -348,7 +360,7 @@ button {
 
 #call-us {
   position: relative;
-  height: fit-content;
+  height: 50vh;
   max-width: 100vw;
 }
 #call-us .img-box {
