--- a/css/master.css
+++ b/css/master.css
@@ -23,6 +23,10 @@ html {
 button {
   border: none;
   cursor: pointer;
+  transition: 0.35s;
+}
+button:hover {
+  opacity: 0.9;
 }
 
 /* End Of Global Styles */
@@ -360,12 +364,12 @@ button {
 
 #call-us {
   position: relative;
-  height: 50vh;
+  max-height: 50vh;
   max-width: 100vw;
 }
 #call-us .img-box {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
 }
 #call-us .img-box img {
   width: 100%;
@@ -411,10 +415,18 @@ button {
   }
 }
 
+@media (max-width: 991px) {
+  #call-us .info {
+    left: 3rem;
+    width: 60%;
+    gap: 2rem;
+  }
+}
+
 @media (max-width: 768px) {
   #call-us .info {
-    top: 9%;
-    left: 1.8rem;
+    top: 15%;
+    left: 2rem;
     width: 70%;
     gap: 0.8rem;
   }
@@ -426,8 +438,28 @@ button {
   }
   #call-us .info button {
     width: 120px;
-    height: 27px;
+    height: 25px;
     font-size: 0.7rem;
+  }
+}
+
+@media (max-width: 350px) {
+  #call-us .info {
+    top: 4%;
+    left: 1.5rem;
+    width: 70%;
+    gap: 0.6rem;
+  }
+  #call-us .info h2 {
+    font-size: 0.8rem;
+  }
+  #call-us .info p {
+    font-size: 0.6rem;
+  }
+  #call-us .info button {
+    width: 110px;
+    height: 22px;
+    font-size: 0.6rem;
   }
 }
 
