--- a/css/master.css
+++ b/css/master.css
@@ -364,7 +364,7 @@ button:hover {
 
 #call-us {
   position: relative;
-  max-height: 50vh;
+  min-height: fit-content;
   max-width: 100vw;
 }
 #call-us .img-box {
@@ -466,3 +466,77 @@ button:hover {
 }
 
 /* End Of Call-Us Section */
+
+/* Start Of Replacement Section*/
+
+.replacement {
+  max-width: 100vw;
+  min-height: fit-content;
+  position: relative;
+}
+.replacement .replacement-bg {
+  width: 100%;
+  max-height: 100%;
+}
+.replacement .replacement-bg img {
+  width: 100%;
+}
+.replacement .text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #00000083;
+  color: var(--white-color);
+  backdrop-filter: blur(12px);
+  width: 53.625rem;
+  height: 19.438rem;
+  border-radius: 12px;
+  text-align: center;
+  padding: 0 1.2rem;
+}
+.replacement .text h2 {
+  font-size: 42px;
+  font-weight: 500;
+  margin: 3rem 0;
+}
+.replacement .text p {
+  font-size: 18px;
+  line-height: 1.4;
+}
+
+@media (max-width: 1024px) {
+  .replacement .text {
+    width: 35rem;
+    height: 14rem;
+    padding: 0 2rem;
+  }
+  .replacement .text h2 {
+    font-size: 24px;
+    font-weight: 500;
+    margin: 1rem 0;
+  }
+  .replacement .text p {
+    font-size: 14px;
+    line-height: 1.4;
+  }
+}
+
+@media (max-width: 767px) {
+  .replacement .text {
+    width: 22rem;
+    height: 7.5rem;
+    padding: 0 1rem;
+  }
+  .replacement .text h2 {
+    font-size: 12px;
+    font-weight: 400;
+    margin: 1rem 0;
+  }
+  .replacement .text p {
+    font-size: 8px;
+    line-height: 1.4;
+  }
+}
+
+/* End Of Replacement Section*/
